Delete delombok and execute async